<?xml version="1.0"?>
<package>
    <name>robot_control</name>
    <version>1.0.0</version>
    <description>The robot_control package</description>
    
    <maintainer email="fabian@todo.todo">fabian</maintainer>
    <license>TODO</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>minotaur_common</build_depend>
    
    <run_depend>message_runtime</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>roscpp</run_depend>
</package>
